--- a/requirements.txt
+++ b/requirements.txt
@@ -1,16 +1,13 @@
-certifi==2024.8.30 ; python_version >= "3.6" and python_version < "4.0"
-chardet==3.0.4 ; python_version >= "3.6" and python_version < "4.0"
-contextvars==2.4 ; python_version >= "3.6" and python_version < "3.7"
-googletrans==3.0.0 ; python_version >= "3.6" and python_version < "4.0"
-h11==0.9.0 ; python_version >= "3.6" and python_version < "4.0"
-h2==3.2.0 ; python_version >= "3.6" and python_version < "4.0"
-hpack==3.0.0 ; python_version >= "3.6" and python_version < "4.0"
-hstspreload==2024.10.1 ; python_version >= "3.6" and python_version < "4.0"
-httpcore==0.9.1 ; python_version >= "3.6" and python_version < "4.0"
-httpx==0.13.3 ; python_version >= "3.6" and python_version < "4.0"
-hyperframe==5.2.0 ; python_version >= "3.6" and python_version < "4.0"
-idna==2.10 ; python_version >= "3.6" and python_version < "4.0"
-immutables==0.19 ; python_version >= "3.6" and python_version < "3.7"
-rfc3986==1.5.0 ; python_version >= "3.6" and python_version < "4.0"
-sniffio==1.2.0 ; python_version >= "3.6" and python_version < "4.0"
-typing-extensions==4.1.1 ; python_version >= "3.6" and python_version < "3.7"
+anyio==3.7.1 ; python_version >= "3.7" and python_version < "4.0"
+certifi==2024.8.30 ; python_version >= "3.7" and python_version < "4.0"
+exceptiongroup==1.2.2 ; python_version >= "3.7" and python_version < "3.11"
+googletrans-py==4.0.0 ; python_version >= "3.7" and python_version < "4.0"
+h11==0.14.0 ; python_version >= "3.7" and python_version < "4.0"
+h2==4.1.0 ; python_version >= "3.7" and python_version < "4.0"
+hpack==4.0.0 ; python_version >= "3.7" and python_version < "4.0"
+httpcore==0.17.3 ; python_version >= "3.7" and python_version < "4.0"
+httpx==0.24.1 ; python_version >= "3.7" and python_version < "4.0"
+hyperframe==6.0.1 ; python_version >= "3.7" and python_version < "4.0"
+idna==3.10 ; python_version >= "3.7" and python_version < "4.0"
+sniffio==1.3.1 ; python_version >= "3.7" and python_version < "4.0"
+typing-extensions==4.7.1 ; python_version >= "3.7" and python_version < "3.8"
